[package]
name = "modl"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
eframe = { version = "0.26.0", features = ["serde"] }
egui-modal = "0.3.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rfd = "0.13.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
thiserror = "1.0.56"
toml = "0.8.10"
